src/main/java/com/hijas/test/antlr/CSharpParser.java
// Generated from D:/Users/SACHAHMED/IdeaProjects/TestAntlr/src/main/resources\CSharp.g4 by ANTLR 4.5.1

package com.hijas.test.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CSharpParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BYTE_ORDER_MARK=1, SINGLE_LINE_DOC_COMMENT=2, DELIMITED_DOC_COMMENT=3, 
		NEW_LINE=4, SINGLE_LINE_COMMENT=5, DELIMITED_COMMENT=6, WHITESPACE=7, 
		ABSTRACT=8, ADD=9, ALIAS=10, ARGLIST=11, AS=12, ASCENDING=13, BASE=14, 
		BOOL=15, BREAK=16, BY=17, BYTE=18, CASE=19, CATCH=20, CHAR=21, CHECKED=22, 
		CLASS=23, CONST=24, CONTINUE=25, DECIMAL=26, DEFAULT=27, DELEGATE=28, 
		DESCENDING=29, DO=30, DOUBLE=31, DYNAMIC=32, ELSE=33, ENUM=34, EQUALS=35, 
		EVENT=36, EXPLICIT=37, EXTERN=38, FALSE=39, FINALLY=40, FIXED=41, FLOAT=42, 
		FOR=43, FOREACH=44, FROM=45, GET=46, GOTO=47, GROUP=48, IF=49, IMPLICIT=50, 
		IN=51, INT=52, INTERFACE=53, INTERNAL=54, INTO=55, IS=56, JOIN=57, LET=58, 
		LOCK=59, LONG=60, NAMESPACE=61, NEW=62, NULL=63, OBJECT=64, ON=65, OPERATOR=66, 
		ORDERBY=67, OUT=68, OVERRIDE=69, PARAMS=70, PARTIAL=71, PRIVATE=72, PROTECTED=73, 
		PUBLIC=74, READONLY=75, REF=76, REMOVE=77, RETURN=78, SBYTE=79, SEALED=80, 
		SELECT=81, SET=82, SHORT=83, SIZEOF=84, STACKALLOC=85, STATIC=86, STRING=87, 
		STRUCT=88, SWITCH=89, THIS=90, THROW=91, TRUE=92, TRY=93, TYPEOF=94, UINT=95, 
		ULONG=96, UNCHECKED=97, UNSAFE=98, USHORT=99, USING=100, VIRTUAL=101, 
		VOID=102, VOLATILE=103, WHERE=104, WHILE=105, YIELD=106, OPEN_BRACE=107, 
		CLOSE_BRACE=108, OPEN_BRACKET=109, CLOSE_BRACKET=110, OPEN_PARENS=111, 
		CLOSE_PARENS=112, DOT=113, COMMA=114, COLON=115, SEMICOLON=116, PLUS=117, 
		MINUS=118, STAR=119, DIV=120, PERCENT=121, AMP=122, BITWISE_OR=123, CARET=124, 
		BANG=125, TILDE=126, ASSIGNMENT=127, LT=128, GT=129, INTERR=130, DOUBLE_COLON=131, 
		OP_COALESCING=132, OP_INC=133, OP_DEC=134, OP_AND=135, OP_OR=136, OP_PTR=137, 
		OP_EQ=138, OP_NE=139, OP_LE=140, OP_GE=141, OP_ADD_ASSIGNMENT=142, OP_SUB_ASSIGNMENT=143, 
		OP_MULT_ASSIGNMENT=144, OP_DIV_ASSIGNMENT=145, OP_MOD_ASSIGNMENT=146, 
		OP_AND_ASSIGNMENT=147, OP_OR_ASSIGNMENT=148, OP_XOR_ASSIGNMENT=149, OP_LEFT_SHIFT=150, 
		OP_LEFT_SHIFT_ASSIGNMENT=151, QUOTE=152, DOUBLE_QUOTE=153, BACK_SLASH=154, 
		DOUBLE_BACK_SLASH=155, SHARP=156, IDENTIFIER=157, INTEGER_LITERAL=158, 
		LiteralAccess=159, REAL_LITERAL=160, CHARACTER_LITERAL=161, STRING_LITERAL=162;
	public static final int
		RULE_identifier = 0, RULE_namespace_or_type_name = 1, RULE_type = 2, RULE_base_type = 3, 
		RULE_simple_type = 4, RULE_numeric_type = 5, RULE_integral_type = 6, RULE_floating_point_type = 7, 
		RULE_class_type = 8, RULE_type_argument_list = 9, RULE_type_arguments = 10, 
		RULE_argument_list = 11, RULE_argument = 12, RULE_argument_name = 13, 
		RULE_primary_expression = 14, RULE_primary_expression_start = 15, RULE_bracket_expression = 16, 
		RULE_simple_name = 17, RULE_parenthesized_expression = 18, RULE_predefined_type = 19, 
		RULE_expression_list = 20, RULE_this_access = 21, RULE_base_access = 22, 
		RULE_object_initializer = 23, RULE_member_initializer_list = 24, RULE_member_initializer = 25, 
		RULE_initializer_value = 26, RULE_unary_expression = 27, RULE_pre_increment_expression = 28, 
		RULE_pre_decrement_expression = 29, RULE_cast_expression = 30, RULE_multiplicative_expression = 31, 
		RULE_additive_expression = 32, RULE_shift_expression = 33, RULE_relational_expression = 34, 
		RULE_equality_expression = 35, RULE_and_expression = 36, RULE_exclusive_or_expression = 37, 
		RULE_inclusive_or_expression = 38, RULE_conditional_and_expression = 39, 
		RULE_conditional_or_expression = 40, RULE_null_coalescing_expression = 41, 
		RULE_conditional_expression = 42, RULE_assignment = 43, RULE_assignment_operator = 44, 
		RULE_expression = 45, RULE_embedded_statement = 46, RULE_block = 47, RULE_statement_list = 48, 
		RULE_statement = 49, RULE_variable_statement = 50, RULE_local_variable_declaration = 51, 
		RULE_local_variable_declarators = 52, RULE_local_variable_declarator = 53, 
		RULE_simple_embedded_statement = 54, RULE_if_body = 55, RULE_if_statement = 56, 
		RULE_switch_statement = 57, RULE_switch_block = 58, RULE_switch_sections = 59, 
		RULE_switch_section = 60, RULE_switch_labels = 61, RULE_switch_label = 62, 
		RULE_while_statement = 63, RULE_for_statement = 64, RULE_for_initializer = 65, 
		RULE_statement_expression_list = 66, RULE_return_statement = 67, RULE_throw_statement = 68, 
		RULE_try_statement = 69, RULE_catch_clauses = 70, RULE_finally_clause = 71, 
		RULE_yield_statement = 72, RULE_compilation_unit = 73, RULE_using_directives = 74, 
		RULE_using_directive = 75, RULE_qualified_identifier = 76, RULE_namespace_member_declarations = 77, 
		RULE_namespace_member_declaration = 78, RULE_namespace_declaration = 79, 
		RULE_namespace_body = 80, RULE_type_declaration = 81, RULE_type_parameter_list = 82, 
		RULE_type_parameters = 83, RULE_all_member_modifiers = 84, RULE_all_member_modifier = 85, 
		RULE_class_definition = 86, RULE_class_base = 87, RULE_class_body = 88, 
		RULE_class_member_declarations = 89, RULE_class_member_declaration = 90, 
		RULE_common_member_declaration = 91, RULE_constructor_declaration = 92, 
		RULE_method_declaration = 93, RULE_method_member_name = 94, RULE_body = 95, 
		RULE_fixed_parameters = 96, RULE_fixed_parameter = 97, RULE_default_argument = 98, 
		RULE_constructor_initializer = 99, RULE_attribute_sections = 100, RULE_attribute_section = 101, 
		RULE_attribute_target_specifier = 102, RULE_attribute_target = 103, RULE_attribute_list = 104, 
		RULE_partial_contextual_keyword = 105, RULE_yield_contextual_keyword = 106, 
		RULE_dynamic_contextual_keyword = 107, RULE_arglist = 108, RULE_right_shift = 109, 
		RULE_literal = 110, RULE_boolean_literal = 111, RULE_keyword = 112, RULE_member_access = 113, 
		RULE_method_invocation = 114;
	public static final String[] ruleNames = {
		"identifier", "namespace_or_type_name", "type", "base_type", "simple_type", 
		"numeric_type", "integral_type", "floating_point_type", "class_type", 
		"type_argument_list", "type_arguments", "argument_list", "argument", "argument_name", 
		"primary_expression", "primary_expression_start", "bracket_expression", 
		"simple_name", "parenthesized_expression", "predefined_type", "expression_list", 
		"this_access", "base_access", "object_initializer", "member_initializer_list", 
		"member_initializer", "initializer_value", "unary_expression", "pre_increment_expression", 
		"pre_decrement_expression", "cast_expression", "multiplicative_expression", 
		"additive_expression", "shift_expression", "relational_expression", "equality_expression", 
		"and_expression", "exclusive_or_expression", "inclusive_or_expression", 
		"conditional_and_expression", "conditional_or_expression", "null_coalescing_expression", 
		"conditional_expression", "assignment", "assignment_operator", "expression", 
		"embedded_statement", "block", "statement_list", "statement", "variable_statement", 
		"local_variable_declaration", "local_variable_declarators", "local_variable_declarator", 
		"simple_embedded_statement", "if_body", "if_statement", "switch_statement", 
		"switch_block", "switch_sections", "switch_section", "switch_labels", 
		"switch_label", "while_statement", "for_statement", "for_initializer", 
		"statement_expression_list", "return_statement", "throw_statement", "try_statement", 
		"catch_clauses", "finally_clause", "yield_statement", "compilation_unit", 
		"using_directives", "using_directive", "qualified_identifier", "namespace_member_declarations", 
		"namespace_member_declaration", "namespace_declaration", "namespace_body", 
		"type_declaration", "type_parameter_list", "type_parameters", "all_member_modifiers", 
		"all_member_modifier", "class_definition", "class_base", "class_body", 
		"class_member_declarations", "class_member_declaration", "common_member_declaration", 
		"constructor_declaration", "method_declaration", "method_member_name", 
		"body", "fixed_parameters", "fixed_parameter", "default_argument", "constructor_initializer", 
		"attribute_sections", "attribute_section", "attribute_target_specifier", 
		"attribute_target", "attribute_list", "partial_contextual_keyword", "yield_contextual_keyword", 
		"dynamic_contextual_keyword", "arglist", "right_shift", "literal", "boolean_literal", 
		"keyword", "member_access", "method_invocation"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'\\u00EF\\u00BB\\u00BF'", null, null, null, null, null, null, "'abstract'", 
		"'add'", "'alias'", "'__arglist'", "'as'", "'ascending'", "'base'", "'bool'", 
		"'break'", "'by'", "'byte'", "'case'", "'catch'", "'char'", "'checked'", 
		"'class'", "'const'", "'continue'", "'decimal'", "'default'", "'delegate'", 
		"'descending'", "'do'", "'double'", "'dynamic'", "'else'", "'enum'", "'equals'", 
		"'event'", "'explicit'", "'extern'", "'false'", "'finally'", "'fixed'", 
		"'float'", "'for'", "'foreach'", "'from'", "'get'", "'goto'", "'group'", 
		"'if'", "'implicit'", "'in'", "'int'", "'interface'", "'internal'", "'into'", 
		"'is'", "'join'", "'let'", "'lock'", "'long'", "'namespace'", "'new'", 
		"'null'", "'object'", "'on'", "'operator'", "'orderby'", "'out'", "'override'", 
		"'params'", "'partial'", "'private'", "'protected'", "'public'", "'readonly'", 
		"'ref'", "'remove'", "'return'", "'sbyte'", "'sealed'", "'select'", "'set'", 
		"'short'", "'sizeof'", "'stackalloc'", "'static'", "'string'", "'struct'", 
		"'switch'", "'this'", "'throw'", "'true'", "'try'", "'typeof'", "'uint'", 
		"'ulong'", "'unchecked'", "'unsafe'", "'ushort'", "'using'", "'virtual'", 
		"'void'", "'volatile'", "'where'", "'while'", "'yield'", "'{'", "'}'", 
		"'['", "']'", "'('", "')'", "'.'", "','", "':'", "';'", "'+'", "'-'", 
		"'*'", "'/'", "'%'", "'&'", "'|'", "'^'", "'!'", "'~'", "'='", "'<'", 
		"'>'", "'?'", "'::'", "'??'", "'++'", "'--'", "'&&'", "'||'", "'->'", 
		"'=='", "'!='", "'<='", "'>='", "'+='", "'-='", "'*='", "'/='", "'%='", 
		"'&='", "'|='", "'^='", "'<<'", "'<<='", "'''", "'\"'", "'\\'", "'\\\\'", 
		"'#'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "BYTE_ORDER_MARK", "SINGLE_LINE_DOC_COMMENT", "DELIMITED_DOC_COMMENT", 
		"NEW_LINE", "SINGLE_LINE_COMMENT", "DELIMITED_COMMENT", "WHITESPACE", 
		"ABSTRACT", "ADD", "ALIAS", "ARGLIST", "AS", "ASCENDING", "BASE", "BOOL", 
		"BREAK", "BY", "BYTE", "CASE", "CATCH", "CHAR", "CHECKED", "CLASS", "CONST", 
		"CONTINUE", "DECIMAL", "DEFAULT", "DELEGATE", "DESCENDING", "DO", "DOUBLE", 
		"DYNAMIC", "ELSE", "ENUM", "EQUALS", "EVENT", "EXPLICIT", "EXTERN", "FALSE", 
		"FINALLY", "FIXED", "FLOAT", "FOR", "FOREACH", "FROM", "GET", "GOTO", 
		"GROUP", "IF", "IMPLICIT", "IN", "INT", "INTERFACE", "INTERNAL", "INTO", 
		"IS", "JOIN", "LET", "LOCK", "LONG", "NAMESPACE", "NEW", "NULL", "OBJECT", 
		"ON", "OPERATOR", "ORDERBY", "OUT", "OVERRIDE", "PARAMS", "PARTIAL", "PRIVATE", 
		"PROTECTED", "PUBLIC", "READONLY", "REF", "REMOVE", "RETURN", "SBYTE", 
		"SEALED", "SELECT", "SET", "SHORT", "SIZEOF", "STACKALLOC", "STATIC", 
		"STRING", "STRUCT", "SWITCH", "THIS", "THROW", "TRUE", "TRY", "TYPEOF", 
		"UINT", "ULONG", "UNCHECKED", "UNSAFE", "USHORT", "USING", "VIRTUAL", 
		"VOID", "VOLATILE", "WHERE", "WHILE", "YIELD", "OPEN_BRACE", "CLOSE_BRACE", 
		"OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_PARENS", "CLOSE_PARENS", "DOT", 
		"COMMA", "COLON", "SEMICOLON", "PLUS", "MINUS", "STAR", "DIV", "PERCENT", 
		"AMP", "BITWISE_OR", "CARET", "BANG", "TILDE", "ASSIGNMENT", "LT", "GT", 
		"INTERR", "DOUBLE_COLON", "OP_COALESCING", "OP_INC", "OP_DEC", "OP_AND", 
		"OP_OR", "OP_PTR", "OP_EQ", "OP_NE", "OP_LE", "OP_GE", "OP_ADD_ASSIGNMENT", 
		"OP_SUB_ASSIGNMENT", "OP_MULT_ASSIGNMENT", "OP_DIV_ASSIGNMENT", "OP_MOD_ASSIGNMENT", 
		"OP_AND_ASSIGNMENT", "OP_OR_ASSIGNMENT", "OP_XOR_ASSIGNMENT", "OP_LEFT_SHIFT", 
		"OP_LEFT_SHIFT_ASSIGNMENT", "QUOTE", "DOUBLE_QUOTE", "BACK_SLASH", "DOUBLE_BACK_SLASH", 
		"SHARP", "IDENTIFIER", "INTEGER_LITERAL", "LiteralAccess", "REAL_LITERAL", 
		"CHARACTER_LITERAL", "STRING_LITERAL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CSharp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CSharpParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(CSharpParser.IDENTIFIER, 0); }
		public TerminalNode FROM() { return getToken(CSharpParser.FROM, 0); }
		public TerminalNode LET() { return getToken(CSharpParser.LET, 0); }
		public TerminalNode WHERE() { return getToken(CSharpParser.WHERE, 0); }
		public TerminalNode JOIN() { return getToken(CSharpParser.JOIN, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CSharpListener ) ((CSharpListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CSharpListener ) ((CSharpListener)listener).exitIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CSharpVisitor ) return ((CSharpVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_identifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(230);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FROM) | (1L << JOIN) | (1L << LET))) != 0) || _la==WHERE || _la==IDENTIFIER) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Namespace_or_type_nameContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<Type_argument_listContext> type_argument_list() {
			return getRuleContexts(Type_argument_listContext.class);
		}
		public Type_argument_listContext type_argument_list(int i) {
			return getRuleContext(Type_argument_listContext.class,i);
		}
		public List<TerminalNode> DOT() { return getTokens(CSharpParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(CSharpParser.DOT, i);
		}
		public Namespace_or_type_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespace_or_type_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CSharpListener ) ((CSharpListener)listener).enterNamespace_or_type_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CSharpListener ) ((CSharpListener)listener).exitNamespace_or_type_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CSharpVisitor ) return ((CSharpVisitor<? extends T>)visitor).visitNamespace_or_type_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Namespace_or_type_nameContext namespace_or_type_name() throws RecognitionException {
		Namespace_or_type_nameContext _localctx = new Namespace_or_type_nameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_namespace_or_type_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(232);
			identifier();
			setState(233);
			type_argument_list();
			}
			setState(241);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(235);
				match(DOT);
				setState(236);
				identifier();
				setState(237);
				type_argument_list();
				}
				}
				setState(243);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Base_typeContext base_type() {
			return getRuleContext(Base_typeContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CSharpListener ) ((CSharpListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CSharpListener ) ((CSharpListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CSharpVisitor ) return ((CSharpVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_type);
		try {
			setState(246);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(244);
				base_type();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(245);
				identifier();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
